--- a/client/src/components/ProductList.css
+++ b/client/src/components/ProductList.css
@@ -1,3 +1,9 @@
+.even-more-container {
+display: flex;
+flex-direction: column;
+gap: 1em;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
